# cosmwasm-gateway

./: .gitignore  Cargo.toml  README.md  build_release.sh  schema.sh
contracts/crypto/: Cargo.toml  README.md
contracts/crypto/examples/: schema.rs
contracts/crypto/schema/: query_msg.json
contracts/crypto/src/: contract.rs  lib.rs  msg.rs
contracts/gateway/: Cargo.toml
contracts/gateway/examples/: schema.rs
contracts/gateway/schema/: handle_msg_for__empty.json  init_msg.json  query_msg_for__empty.json
contracts/gateway/src/: contract.rs  state.rs
contracts/proxy/src/: contract.rs
contracts/token/: Cargo.toml  README.md
contracts/token-factory/: Cargo.toml
contracts/token-factory/examples/: schema.rs
contracts/token-factory/schema/: config.json  handle_msg.json  init_msg.json  query_msg.json
contracts/token-factory/src/: contract.rs  lib.rs  state.rs  tests.rs
contracts/token/examples/: schema.rs
contracts/token/schema/: handle_msg.json  init_msg.json
contracts/token/src/: contract.rs  lib.rs
demo/: client.js  contracts.js  index.js  package-lock.json  package.json  transfer.js  utils.js  wasm.js
demo/contracts/: gateway.js
gateway-contracts/: Cargo.toml  README.md
gateway-contracts/contracts/proxy/: Cargo.toml  NOTICE
gateway-contracts/contracts/proxy/src/: state.rs
gateway-contracts/contracts/token/: Cargo.toml
gateway-contracts/contracts/token-factory/: Cargo.toml
gateway-contracts/contracts/token-factory/examples/: schema.rs
gateway-contracts/contracts/token-factory/src/: contract.rs  msg.rs  state.rs  tests.rs
gateway-contracts/contracts/token/src/: contract.rs  tests.rs
tests/terra/: contracts.js  index.js  package.json  transfer.js  utils.js  wasm.js
tests/terra/contracts/: gateway.js  token.js
