[package]
name = "crypto-verify"
version = "0.1.0"
authors = ["Mauro Lacy <maurolacy@users.noreply.github.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# Change this to [] if you don't need Windows support and want faster integration tests.
#default = ["cranelift"]
default = []
# Use cranelift backend instead of singlepass. This is required for development on Windows.
cranelift = ["cosmwasm-vm/cranelift"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[dependencies]
axelar-gateway = { path = "../../packages/axelar-gateway", default-features = false, version = "0.1.0"}
cosmwasm-crypto = "0.14.0-beta1"
cosmwasm-std = { version = "0.10.1" }
cosmwasm-storage = { version = "0.10.1" }
hex = "0.4"
rlp = "0.5"
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
sha2 = "0.9"
sha3 = "0.9"

[dev-dependencies]
k256 = { version = "0.7.2", features = ["ecdsa", "sha256"] }
rand_core = { version = "0.5", features = ["getrandom"] }
cosmwasm-vm = "0.10"
cosmwasm-schema = { version = "0.10.1" }
hex-literal = "0.3.1"
