[package]
name = "axelar-token"
version = "0.1.0"
authors = ["jack0son"]
edition = "2018"
description = "CosmWasm-20 compliant token implementation for Axelar pegged assets"
license = "MIT"
repository = ""
homepage = ""
documentation = ""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
axelar-gateway-contracts = { path = "../../packages/axelar-gateway-contracts", default-features = false, version = "0.1.0"}
cw2 = "0.2"
cw20 = "0.2"
cw20-base = { version = "0.2", features = ["library"] }
cosmwasm-std = { version = "0.10.1", features = ["iterator"] }
cosmwasm-storage = { version = "0.10.1", features = ["iterator"] }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }

[dev-dependencies]
# we only need to enable this if we use integration tests
#cosmwasm-vm = { version = "0.10.1", default-features = false }
cosmwasm-schema = { version = "0.10.1" }
